--- a/08-aws-kubernetes-code-ci-cd-pipeline.yml
+++ b/08-aws-kubernetes-code-ci-cd-pipeline.yml
@@ -35,15 +35,14 @@ stages:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
         ArtifactName: 'manifests'
         publishLocation: 'Container'
-
 - stage: Deploy
   displayName: Deploy image
-  jobs:
+  jobs:  
   - job: Deploy
     displayName: Deploy
     pool:
-      vmImage: ubuntu-latest
-    steps:
+      vmImage: 'ubuntu-latest'
+    steps:   
   - task: DownloadPipelineArtifact@2
     inputs:
       buildType: 'current'
