--- a/08-aws-kubernetes-code-ci-cd-pipeline.yml
+++ b/08-aws-kubernetes-code-ci-cd-pipeline.yml
@@ -5,7 +5,8 @@ resources:
 - repo: self
 
 variables:
-  tag: '$(Build.BuildId)'
+  tag: 35
+  #'$(Build.BuildId)'
 
 stages:
 - stage: Build
@@ -17,14 +18,14 @@ stages:
       vmImage: ubuntu-latest
     steps:
 
-    - task: Docker@2
-      displayName: Build and Push an image
-      inputs:
-        containerRegistry: 'in28min-docker-hub'
-        repository: 'in28min/currency-exchange-devops'
-        command: 'buildAndPush'
-        Dockerfile: '**/Dockerfile'
-        tags: '$(tag)'
+    # - task: Docker@2
+    #   displayName: Build and Push an image
+    #   inputs:
+    #     containerRegistry: 'in28min-docker-hub'
+    #     repository: 'in28min/currency-exchange-devops'
+    #     command: 'buildAndPush'
+    #     Dockerfile: '**/Dockerfile'
+    #     tags: '$(tag)'
     - task: CopyFiles@2
       inputs:
         SourceFolder: '$(System.DefaultWorkingDirectory)'
